<resources>
    <string name="app_name">Campus_Points</string>
    <string name="student_id">Student ID</string>
    <string name="register">Register</string>
    <string name="school_email_address">School Email Address</string>
    <string name="current_gpa">Current GPA</string>
    <string name="full_name">Full Name</string>
    <string name="success_is_not_final_failure_is_not_fatal_it_is_the_courage_to_continue_that_counts_winston_churchill">Success is not final, failure is not fatal:It is the courage to continue that counts. - Winston Churchill</string>
    <string name="email">Student Email</string>
    <string name="student_id2">Student ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="app_background">App Background</string>
    <string name="statement">Success is not final, failure is not fatal:It is the courage to continue that counts. - Winston Churchill</string>
    <string name="points">Points</string>
    <string name="campus">Campus</string>
    <string name="background_image">Background Image</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="verification">VERIFICATION</string>
    <string name="verify">VERIFY</string>
    <string name="send">Send</string>
    <string name="redeem">Redeem</string>
    <string name="scrollable_content_for_visual_performance_data">Scrollable content for visual performance data</string>
    <string name="coin_image_representing_your_points">Coin image representing your points</string>
    <string name="your_earned_points">Your earned points</string>
    <string name="welcome">Welcome:</string>
    <string name="visual_performance">Visual Performance</string>
    <string name="points_0">Points: 0</string>
    <string name="my_points">My Points</string>
    <string name="student_profile_or_school_logo">student profile or school logo</string>
    <string name="visual_performance1">Visual performance</string>
    <string name="points_coupon">POINTS COUPON</string>
    <string name="print">PRINT</string>
</resources>