<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->
    <View
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="@color/blue_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Points CardView -->

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:letterSpacing="0.025"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/pointsCardView"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:elevation="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECECF5">

            <TextView
                android:id="@+id/myPointsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_points"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.056"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.158"
                android:contentDescription="@string/your_earned_points"/>

            <ImageView
                android:id="@+id/coinImageView"
                android:layout_width="72dp"
                android:layout_height="52dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.052"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.789"
                app:srcCompat="@drawable/coin"
                android:contentDescription="@string/coin_image_representing_your_points" />

            <TextView
                android:id="@+id/pointsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_0"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toEndOf="@+id/coinImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Redeem Button -->
    <Button
        android:id="@+id/redeemBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redeem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <!-- Headline CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/headlineCardView"
        android:layout_width="369dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsCardView">

        <TextView
            android:id="@+id/textViewHead"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/visual_performance"
            android:text="@string/visual_performance1"
            android:textSize="34sp" />
    </androidx.cardview.widget.CardView>

    <!-- ScrollView for AnyChartView -->
    <ScrollView
        android:layout_width="409dp"
        android:layout_height="334dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headlineCardView"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/scrollable_content_for_visual_performance_data">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.anychart.AnyChartView
                android:id="@+id/idBarChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <com.anychart.AnyChartView
                android:id="@+id/idProgress"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>